--- a/CGC/CGCalculator.csproj
+++ b/CGC/CGCalculator.csproj
@@ -62,7 +62,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -85,7 +84,6 @@
     <Compile Include="AuthorizationForm.Designer.cs">
       <DependentUpon>AuthorizationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AuthorizationProcessor.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="ExcelTransfer.cs">
       <SubType>Form</SubType>
@@ -177,6 +175,12 @@
       <ProductName>Windows Installer 4.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuthorizationProcessor\AuthorizationProcessor.csproj">
+      <Project>{1e003880-e47c-442b-9c7d-6434a4636a3c}</Project>
+      <Name>AuthorizationProcessor</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
